<resources>
    <string name="app_name">ChartsSample</string>
    <string name="action_settings">Settings</string>

    <!-- BUTTON TEXT -->
    <string name="btn_screen1">Screen 1</string>
    <string name="btn_screen2">Screen 2</string>

    <!-- STRING VALUES-->
    <string name="job_title">Jobs per week</string>
    <string name="on_time_title">On-time, %</string>
    <string name="pickups">Pickups</string>
    <string name="deliveries">Deliveries</string>
    <string name="avg_stop_time">Average stop time, hrs</string>
    <string name="deliveries_value">73%</string>
    <string name="pickups_value">68%</string>
    <string name="details">Details</string>
    <string name="header_title">55% GPS utilization</string>
    <string name="on_time_per_week">On-time per week, %</string>
    <string name="on_time_per_location">On-time per location, %</string>
    <string name="btn_screen3">Screen 3</string>
    <string name="gps_utilization">GPS Utilization</string>

</resources>
