<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_navigation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@id/ivNavigation"
                android:layout_toRightOf="@id/ivNavigation"
                android:text="@string/header_title"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/details"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rlHeader"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/tvJobAWeekTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider0"
            android:text="@string/job_title"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcJobAWeek"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tvJobAWeekTitle" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/bcJobAWeek"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/tvOnTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:text="@string/on_time_title"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llPies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOnTimeTitle"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pcPickups"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pcPickups"
                    android:gravity="center"
                    android:text="@string/pickups"
                    android:textAllCaps="true"
                    android:textColor="@color/blue" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pcDeliveries"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pcDeliveries"
                    android:gravity="center"
                    android:text="@string/deliveries"
                    android:textAllCaps="true"
                    android:textColor="@color/blue" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/llPies"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/tvAvgStopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:text="@string/avg_stop_time"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/hbcAvgStopTime"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="200dp"
            android:layout_below="@id/tvAvgStopTime" />

    </RelativeLayout>
</ScrollView>
